configurable timeout for runner registration

--- a/action.yml
+++ b/action.yml
@@ -73,6 +73,11 @@ inputs:
     description: >-
       Username under which to run the Runner, e.g. ubuntu.
     required: true
+  timeout-minutes:
+    description:
+      Timeout in minutes to wait for runner being registered
+    required: false
+    default: '5'
 outputs:
   label:
     description: >-
